# emailnator-wrapper

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  emailnator.asyncio.builders.helpers.rst  emailnator.asyncio.builders.rst  emailnator.asyncio.helpers.rst  emailnator.asyncio.rst  emailnator.config.rst  emailnator.helpers.rst  emailnator.sync.rst  index.rst  modules.rst  requirements.txt
email_generator/: README.md  pyproject.toml
email_generator/examples/: asyncio_example.py  sync_example.py
email_generator/src/gmail_generator/: __init__.py  version.py
email_generator/src/gmail_generator/asyncio/: __init__.py  generators.py
email_generator/src/gmail_generator/asyncio/builders/helpers/: xsrf_token_service.py
email_generator/src/gmail_generator/asyncio/helpers/: __init__.py  metaclass.py
email_generator/src/gmail_generator/helpers/: __init__.py
email_generator/src/gmail_generator/sync/: email_generator.py  email_generator.pyi
examples/: asyncio_example.py  sync_example.py
src/emailnator/: __init__.py  version.py
src/emailnator/asyncio/: __init__.py  email_generator.py  generators.py  message_getter.py
src/emailnator/config/: __init__.py  config.py  (+2 more)
tests/asyncio/: test_generate_bulk_emails.py  test_generate_email.py  test_get_message.py  test_get_message_from_sender.py  test_get_messages.py  test_parse_message_from_sender.py
tests/sync/: email_generator.py  message_getter.py  test_bulk_emails_generator.py  test_get_message_from_sender.py  test_messages_getter.py  test_parse_message_from_sender.py
(+22 files in other folders)
