[build-system]
requires = ["setuptools >= 80"]
build-backend = "setuptools.build_meta"

[project]
name = "email_generator"
dynamic = ["version", "readme"]
keywords = ["email generator", "emailnator", "gmailnator", "gmail generator"]
description = "A Python wrapper for the Emailnator service providing both synchronous and asynchronous APIs."
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE.txt"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
]
authors = [
    { name = "unelected" }
]

dependencies = [
  "httpx~=0.28.1",
  "pyyaml~=6.0.2"
]

#[project.urls]
#Homepage = "https://github.com/unelected/zafiaonline.py"
#Repository = "https://github.com/unelected/zafiaonline.py.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gmail_generator.config" = ["*.yaml"]
[tool.setuptools.dynamic]
version = { attr = "gmail_generator.version.__version__" }
readme = {file = "README.md", content-type = "text/markdown"}
